--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite src/", 
+    "build": "vite build src/",
+    "preview": "vite preview src" 
   },
   "keywords": [],
   "author": "",
@@ -15,5 +17,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "vite": "^6.3.5"
   }
 }
