--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src"
   },
   "keywords": [],
-  "author": "",
+  "author": "Gustavo Sotres",
   "license": "ISC",
   "description": "",
   "dependencies": {
